Image upload REST endpoint and pic path in properties

--- a/src/main/resources/templates/projekt.html
+++ b/src/main/resources/templates/projekt.html
@@ -22,7 +22,7 @@
         <h1>PPJ projekt</h1>
     </div>
     <div class="row row-centered text-center bottom-buffer">
-        <img class="img-rounded" th:src="@{${image.url}}"/>
+        <img class="img-rounded" th:src="@{${path+''+image.url}}"/>
     </div>
     <div class="row row-centered text-center">
         <div class="col-md-4 col-md-offset-4">
